# weather-mcp

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  weather-mcp-server.py
src/weather_mcp_server/: __init__.py  main.py  weather.py
